# parser-rs

./: Cargo.toml  LICENSE  README.md
examples/: basic_parser.rs  complete_usage.rs  embedded_basic.rs  embedded_error_handling.rs  embedded_uart_config.rs
src/: command.rs  context.rs  lib.rs  parser.rs
