[package]
name = "parser-rs"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/parser-rs.git"

[lib]
crate-type = ["rlib"]

[dependencies]
osal-rs = { path = "../osal-rs/osal-rs", features = ["freertos"] }
osal-rs-tests = { path = "../osal-rs/osal-rs-tests", features = ["freertos"] }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
opt-level = "z"
lto = true