[package]
name = "at-parser-rs"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
description = "A flexible AT command parser for embedded systems and communication devices with no_std support"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/at-parser-rs.git"
homepage = "https://github.com/HiHappyGarden/at-parser-rs"
documentation = "https://docs.rs/at-parser-rs"
keywords = ["at-commands", "parser", "embedded", "no-std", "communication"]
categories = ["embedded", "no-std", "parser-implementations"]

[lib]
crate-type = ["rlib"]

[features]
default = []
osal_rs = ["dep:osal-rs"]
enable_panic = []

[dependencies]
osal-rs = { path = "../osal-rs/osal-rs", features = ["freertos"], optional = true }

[[example]]
name = "complete_usage"
path = "examples/complete_usage.rs"

[[example]]
name = "basic_parser"
path = "examples/basic_parser.rs"

[[example]]
name = "embedded_basic"
path = "examples/embedded_basic.rs"

[[example]]
name = "embedded_error_handling"
path = "examples/embedded_error_handling.rs"

[[example]]
name = "embedded_uart_config"
path = "examples/embedded_uart_config.rs"

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
opt-level = "z"
lto = true